# parallel-programming-2019

opencl-lab1/: CMakeLists.txt  convolution.cl  main.cpp
opencl-lab2/: CMakeLists.txt  input.txt  main.cpp  scan.cl
